--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -318,8 +318,8 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
 
-  avro-legacy:
-    name: Test with legacy avro
+  avro-legacy-1.8.2:
+    name: Test with legacy avro version 1.8.2
     strategy:
       matrix:
         os: [ubuntu-22.04]
@@ -348,6 +348,38 @@ jobs:
       - name: Test
         env:
           JAVA_OPTS: '-Davro.version=1.8.2'
+        run: sbt '++ ${{ matrix.scala }}' avro/test
+
+  avro-legacy-1.11.4:
+    name: Test with legacy avro version 1.11.4
+    strategy:
+      matrix:
+        os: [ubuntu-22.04]
+        scala: [2.13]
+        java: [corretto@17]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - name: Checkout current branch (full)
+        uses: actions/checkout@v5
+        with:
+          fetch-depth: 0
+
+      - name: Setup Java (corretto@17)
+        id: setup-java-corretto-17
+        if: matrix.java == 'corretto@17'
+        uses: actions/setup-java@v5
+        with:
+          distribution: corretto
+          java-version: 17
+          cache: sbt
+
+      - name: sbt update
+        if: matrix.java == 'corretto@17' && steps.setup-java-corretto-17.outputs.cache-hit == 'false'
+        run: sbt +update
+
+      - name: Test
+        env:
+          JAVA_OPTS: '-Davro.version=1.11.4'
         run: sbt '++ ${{ matrix.scala }}' avro/test
 
   site:
