--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,10 +24,10 @@ concurrency:
 
 jobs:
   build:
-    name: Build and Test
+    name: Test
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-22.04]
         scala: [3, 2.13, 2.12]
         java: [corretto@17, corretto@11]
         project: [rootJVM]
@@ -44,6 +44,9 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Setup sbt
+        uses: sbt/setup-sbt@v1
+
       - name: Setup Java (corretto@17)
         id: setup-java-corretto-17
         if: matrix.java == 'corretto@17'
@@ -52,6 +55,10 @@ jobs:
           distribution: corretto
           java-version: 17
           cache: sbt
+
+      - name: sbt update
+        if: matrix.java == 'corretto@17' && steps.setup-java-corretto-17.outputs.cache-hit == 'false'
+        run: sbt +update
 
       - name: Setup Java (corretto@11)
         id: setup-java-corretto-11
@@ -62,13 +69,6 @@ jobs:
           java-version: 11
           cache: sbt
 
-      - name: Setup sbt
-        uses: sbt/setup-sbt@v1
-
-      - name: sbt update
-        if: matrix.java == 'corretto@17' && steps.setup-java-corretto-17.outputs.cache-hit == 'false'
-        run: sbt +update
-
       - name: sbt update
         if: matrix.java == 'corretto@11' && steps.setup-java-corretto-11.outputs.cache-hit == 'false'
         run: sbt +update
@@ -77,7 +77,7 @@ jobs:
         run: sbt githubWorkflowCheck
 
       - name: Check headers and formatting
-        if: matrix.java == 'corretto@17' && matrix.os == 'ubuntu-latest'
+        if: matrix.java == 'corretto@17' && matrix.os == 'ubuntu-22.04'
         run: sbt 'project ${{ matrix.project }}' '++ ${{ matrix.scala }}' headerCheckAll scalafmtCheckAll 'project /' scalafmtSbtCheck
 
       - name: Test
@@ -117,7 +117,7 @@ jobs:
     if: github.event_name != 'pull_request' && (startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main')
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-22.04]
         java: [corretto@17]
     runs-on: ${{ matrix.os }}
     steps:
@@ -125,6 +125,9 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - name: Setup sbt
+        uses: sbt/setup-sbt@v1
 
       - name: Setup Java (corretto@17)
         id: setup-java-corretto-17
@@ -135,6 +138,10 @@ jobs:
           java-version: 17
           cache: sbt
 
+      - name: sbt update
+        if: matrix.java == 'corretto@17' && steps.setup-java-corretto-17.outputs.cache-hit == 'false'
+        run: sbt +update
+
       - name: Setup Java (corretto@11)
         id: setup-java-corretto-11
         if: matrix.java == 'corretto@11'
@@ -143,13 +150,6 @@ jobs:
           distribution: corretto
           java-version: 11
           cache: sbt
-
-      - name: Setup sbt
-        uses: sbt/setup-sbt@v1
-
-      - name: sbt update
-        if: matrix.java == 'corretto@17' && steps.setup-java-corretto-17.outputs.cache-hit == 'false'
-        run: sbt +update
 
       - name: sbt update
         if: matrix.java == 'corretto@11' && steps.setup-java-corretto-11.outputs.cache-hit == 'false'
@@ -211,10 +211,10 @@ jobs:
 
   dependency-submission:
     name: Submit Dependencies
-    if: github.event_name != 'pull_request'
+    if: github.event.repository.fork == false && github.event_name != 'pull_request'
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-22.04]
         java: [corretto@17]
     runs-on: ${{ matrix.os }}
     steps:
@@ -222,6 +222,9 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - name: Setup sbt
+        uses: sbt/setup-sbt@v1
 
       - name: Setup Java (corretto@17)
         id: setup-java-corretto-17
@@ -232,6 +235,10 @@ jobs:
           java-version: 17
           cache: sbt
 
+      - name: sbt update
+        if: matrix.java == 'corretto@17' && steps.setup-java-corretto-17.outputs.cache-hit == 'false'
+        run: sbt +update
+
       - name: Setup Java (corretto@11)
         id: setup-java-corretto-11
         if: matrix.java == 'corretto@11'
@@ -240,13 +247,6 @@ jobs:
           distribution: corretto
           java-version: 11
           cache: sbt
-
-      - name: Setup sbt
-        uses: sbt/setup-sbt@v1
-
-      - name: sbt update
-        if: matrix.java == 'corretto@17' && steps.setup-java-corretto-17.outputs.cache-hit == 'false'
-        run: sbt +update
 
       - name: sbt update
         if: matrix.java == 'corretto@11' && steps.setup-java-corretto-11.outputs.cache-hit == 'false'
@@ -262,7 +262,7 @@ jobs:
     name: Validate Steward Config
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-22.04]
         java: [temurin@11]
     runs-on: ${{ matrix.os }}
     steps:
@@ -287,7 +287,7 @@ jobs:
     name: Test coverage
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-22.04]
         scala: [2.13]
         java: [corretto@17]
     runs-on: ${{ matrix.os }}
@@ -325,7 +325,7 @@ jobs:
     name: Test with legacy avro
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-22.04]
         scala: [2.13]
         java: [corretto@17]
     runs-on: ${{ matrix.os }}
@@ -360,7 +360,7 @@ jobs:
     name: Generate Site
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-22.04]
         scala: [2.13]
         java: [corretto@17]
     runs-on: ${{ matrix.os }}
